--- a/chat-common/pom.xml
+++ b/chat-common/pom.xml
@@ -12,5 +12,10 @@
     <artifactId>chat-common</artifactId>
     <version>1.0</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    </dependencies>
 </project>
