--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,29 @@
         <module>chat-web</module>
         <module>chat-common</module>
     </modules>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.kakuiwong</groupId>
+                <artifactId>chat-common</artifactId>
+                <version>1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>4.1.53.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.74</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache</artifactId>
+                <version>2.10.6</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
